welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var taille = num.length
	for (i <- 0 to taille - 2)
  var x = 0
  		{
        if (num(i))<num(i+1))
        	{
            x = x +1
          }
      }
  
 
  return x }